Adding a couple of notes for developers in the README